# matrix_calculator

./: CMakeLists.txt  README.md
include/: fraction.hpp  lmc.hpp  matrix.hpp  matrix_calc.hpp
src/: fraction.cpp  lmc.cpp  main.cpp  matrix_calc.cpp
